--- a/src/main/Makefile.am
+++ b/src/main/Makefile.am
@@ -5,4 +5,4 @@
 bin_PROGRAMS=space
 space_SOURCES=main.cpp
 space_CPPFLAGS= -DNO_THROW='throw()' -std=c++11
-
+space_LDADD=$(top_srcdir)/src/core/libcore.a
