added rudimentary windowing code

--- a/src/core/Makefile
+++ b/src/core/Makefile
@@ -74,9 +74,9 @@ AUTOHEADER = ${SHELL} /home/hans/dev/space/space/missing --run autoheader
 AUTOMAKE = ${SHELL} /home/hans/dev/space/space/missing --run automake-1.11
 AWK = gawk
 CPPFLAGS = 
-CXX = g++
+CXX = /usr/local/bin/g++
 CXXDEPMODE = depmode=gcc3
-CXXFLAGS = -g -O2
+CXXFLAGS = -g3 -gdwarf-2
 CYGPATH_W = echo
 DEFS = -DHAVE_CONFIG_H
 DEPDIR = .deps
@@ -113,7 +113,7 @@ abs_builddir = /home/hans/dev/space/space/src/core
 abs_srcdir = /home/hans/dev/space/space/src/core
 abs_top_builddir = /home/hans/dev/space/space
 abs_top_srcdir = /home/hans/dev/space/space
-ac_ct_CXX = g++
+ac_ct_CXX = 
 am__include = include
 am__leading_dot = .
 am__quote = 
