added basic json storage and lookup code

--- a/configure.ac
+++ b/configure.ac
@@ -3,9 +3,10 @@
 
 AC_PREREQ([2.68])
 AC_INIT([space], [0.1], [hansvm.projects@gmail.com])
+AC_LANG(C++)
 AC_CONFIG_SRCDIR([src/main/main.cpp])
 AC_CONFIG_HEADERS([config.h])
-AC_CONFIG_FILES([Makefile src/main/Makefile src/core/Makefile])
+AC_CONFIG_FILES([Makefile src/main/Makefile src/core/Makefile src/json/Makefile])
 
 AM_INIT_AUTOMAKE
 AC_PROG_RANLIB
@@ -21,5 +22,19 @@ AC_PROG_CXX
 
 # Checks for library functions.
 
+# Check for SFML
+
+# Check for SFML Window library
+
+SAVED_LDFLAGS=$LDFLAGS
+LDFLAGS="$LDFLAGS -lsfml-window"
+
+AC_LINK_IFELSE(
+    [AC_LANG_PROGRAM([#include <SFML/Window/VideoMode.hpp>],
+    [sf::VideoMode::getDesktopMode();])],
+    [AC_MSG_RESULT([checking for SFML window library... yes])],
+    [AC_MSG_ERROR([No compatible version of the SFML Window library found.])])
+
+LDFLAGS=$SAVED_LDFLAGS
 
 AC_OUTPUT
