first working test

--- a/src/json/Makefile.am
+++ b/src/json/Makefile.am
@@ -4,4 +4,4 @@
 
 noinst_LIBRARIES=libjson.a
 libjson_a_CPPFLAGS= -DNO_THROW='throw()' -std=c++11
-libjson_a_SOURCES=JSONType.cpp JSONTokens.cpp JSONTree.cpp
+libjson_a_SOURCES=JSONType.cpp JSONTokens.cpp JSONTree.cpp JSONTreeBuilder.cpp JSONReader.cpp
