made JSONReader interface easier added JSONWriter functionality for condensed writers added basic settings (work in progress) added a simple file/folder IO interface

--- a/src/main/Makefile.am
+++ b/src/main/Makefile.am
@@ -3,6 +3,6 @@
 #
 
 bin_PROGRAMS=space
-space_SOURCES=main.cpp
-space_CPPFLAGS= -DNO_THROW='throw()' -std=c++11 -lsfml-window -I../json
+space_SOURCES=Path.cpp Settings.cpp main.cpp
+space_CPPFLAGS= -DNO_THROW='throw()' -std=c++11 -lsfml-window -I../core -I../json
 space_LDADD=$(top_srcdir)/src/core/libcore.a $(top_srcdir)/src/json/libjson.a
