--- a/src/main/Makefile.am
+++ b/src/main/Makefile.am
@@ -4,5 +4,5 @@
 
 bin_PROGRAMS=space
 space_SOURCES=Application.cpp Path.cpp Data.cpp Settings.cpp main.cpp
-space_CPPFLAGS= -DNO_THROW='throw()' -std=c++11 -lsfml-window -I../core -I../json
+space_CPPFLAGS= -DNO_THROW='throw()' -DRUNTIME_DATA_PATH -std=c++11 -lsfml-window -I../core -I../json
 space_LDADD=$(top_srcdir)/src/core/libcore.a $(top_srcdir)/src/json/libjson.a
