added opengl and sfml dependencies added temporary source file because i don't want to delete makefile and later add it again

--- a/src/core/Makefile
+++ b/src/core/Makefile
@@ -51,7 +51,7 @@ AR = ar
 ARFLAGS = cru
 libcore_a_AR = $(AR) $(ARFLAGS)
 libcore_a_LIBADD =
-am_libcore_a_OBJECTS = Window.$(OBJEXT)
+am_libcore_a_OBJECTS = Temp.$(OBJEXT)
 libcore_a_OBJECTS = $(am_libcore_a_OBJECTS)
 DEFAULT_INCLUDES = -I. -I$(top_builddir)
 depcomp = $(SHELL) $(top_srcdir)/depcomp
@@ -152,7 +152,7 @@ top_build_prefix = ../../
 top_builddir = ../..
 top_srcdir = ../..
 noinst_LIBRARIES = libcore.a
-libcore_a_SOURCES = Window.cpp
+libcore_a_SOURCES = Temp.cpp
 all: all-am
 
 .SUFFIXES:
@@ -201,7 +201,7 @@ mostlyclean-compile:
 distclean-compile:
 	-rm -f *.tab.c
 
-include ./$(DEPDIR)/Window.Po
+include ./$(DEPDIR)/Temp.Po
 
 .cpp.o:
 	$(CXXCOMPILE) -MT $@ -MD -MP -MF $(DEPDIR)/$*.Tpo -c -o $@ $<
