--- a/src/core/Makefile.in
+++ b/src/core/Makefile.in
@@ -101,8 +101,8 @@ am__v_AR_1 =
 libcore_a_AR = $(AR) $(ARFLAGS)
 libcore_a_LIBADD =
 am_libcore_a_OBJECTS = libcore_a-Path.$(OBJEXT) \
-	libcore_a-Language.$(OBJEXT) libcore_a-Resource.$(OBJEXT) \
-	libcore_a-StringBundle.$(OBJEXT)
+	libcore_a-Properties.$(OBJEXT) libcore_a-Language.$(OBJEXT) \
+	libcore_a-Resource.$(OBJEXT) libcore_a-StringBundle.$(OBJEXT)
 libcore_a_OBJECTS = $(am_libcore_a_OBJECTS)
 AM_V_P = $(am__v_P_@AM_V@)
 am__v_P_ = $(am__v_P_@AM_DEFAULT_V@)
@@ -250,7 +250,7 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 noinst_LIBRARIES = libcore.a
-libcore_a_SOURCES = Path.cpp Language.cpp Resource.cpp StringBundle.cpp
+libcore_a_SOURCES = Path.cpp Properties.cpp Language.cpp Resource.cpp StringBundle.cpp
 libcore_a_CPPFLAGS = -std=c++11
 all: all-am
 
@@ -303,6 +303,7 @@ distclean-compile:
 
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libcore_a-Language.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libcore_a-Path.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libcore_a-Properties.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libcore_a-Resource.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libcore_a-StringBundle.Po@am__quote@
 
@@ -333,6 +334,20 @@ libcore_a-Path.obj: Path.cpp
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	$(AM_V_CXX)source='Path.cpp' object='libcore_a-Path.obj' libtool=no @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCXX_FALSE@	$(AM_V_CXX@am__nodep@)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libcore_a_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o libcore_a-Path.obj `if test -f 'Path.cpp'; then $(CYGPATH_W) 'Path.cpp'; else $(CYGPATH_W) '$(srcdir)/Path.cpp'; fi`
+
+libcore_a-Properties.o: Properties.cpp
+@am__fastdepCXX_TRUE@	$(AM_V_CXX)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libcore_a_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT libcore_a-Properties.o -MD -MP -MF $(DEPDIR)/libcore_a-Properties.Tpo -c -o libcore_a-Properties.o `test -f 'Properties.cpp' || echo '$(srcdir)/'`Properties.cpp
+@am__fastdepCXX_TRUE@	$(AM_V_at)$(am__mv) $(DEPDIR)/libcore_a-Properties.Tpo $(DEPDIR)/libcore_a-Properties.Po
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	$(AM_V_CXX)source='Properties.cpp' object='libcore_a-Properties.o' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(AM_V_CXX@am__nodep@)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libcore_a_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o libcore_a-Properties.o `test -f 'Properties.cpp' || echo '$(srcdir)/'`Properties.cpp
+
+libcore_a-Properties.obj: Properties.cpp
+@am__fastdepCXX_TRUE@	$(AM_V_CXX)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libcore_a_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT libcore_a-Properties.obj -MD -MP -MF $(DEPDIR)/libcore_a-Properties.Tpo -c -o libcore_a-Properties.obj `if test -f 'Properties.cpp'; then $(CYGPATH_W) 'Properties.cpp'; else $(CYGPATH_W) '$(srcdir)/Properties.cpp'; fi`
+@am__fastdepCXX_TRUE@	$(AM_V_at)$(am__mv) $(DEPDIR)/libcore_a-Properties.Tpo $(DEPDIR)/libcore_a-Properties.Po
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	$(AM_V_CXX)source='Properties.cpp' object='libcore_a-Properties.obj' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(AM_V_CXX@am__nodep@)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libcore_a_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o libcore_a-Properties.obj `if test -f 'Properties.cpp'; then $(CYGPATH_W) 'Properties.cpp'; else $(CYGPATH_W) '$(srcdir)/Properties.cpp'; fi`
 
 libcore_a-Language.o: Language.cpp
 @am__fastdepCXX_TRUE@	$(AM_V_CXX)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libcore_a_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT libcore_a-Language.o -MD -MP -MF $(DEPDIR)/libcore_a-Language.Tpo -c -o libcore_a-Language.o `test -f 'Language.cpp' || echo '$(srcdir)/'`Language.cpp
